[gd_scene load_steps=33 format=3 uid="uid://3u8i27gnq64g"]

[ext_resource type="Script" path="res://Scripts/cole_battle.gd" id="1_hla4g"]
[ext_resource type="Texture2D" uid="uid://d1md6gnh8xtoo" path="res://Sprites/Gui/GUI/GUI_1x.png" id="2_hga3y"]
[ext_resource type="Texture2D" uid="uid://c74rnnfdq24tu" path="res://Sprites/Sky/Clouds/Clouds 3/1.png" id="3_4qxtv"]
[ext_resource type="Texture2D" uid="uid://yn4bamnofoch" path="res://Sprites/Sky/Clouds/Clouds 3/2.png" id="4_5mc7b"]
[ext_resource type="Texture2D" uid="uid://rme6v4wv4mba" path="res://Sprites/Sky/Clouds/Clouds 3/3.png" id="5_cmgwt"]
[ext_resource type="Texture2D" uid="uid://b2d1ap1c02vcc" path="res://Sprites/Dinos/trex.png" id="6_6oqb3"]
[ext_resource type="Texture2D" uid="uid://baufesxhxwqh4" path="res://Sprites/Sky/Clouds/Clouds 3/4.png" id="6_keonl"]
[ext_resource type="Texture2D" uid="uid://ciihqsj64s6o7" path="res://Sprites/Dinos/trex_closed.png" id="7_64adk"]
[ext_resource type="PackedScene" uid="uid://ddk878xihgcxw" path="res://Scenes/text_box_general.tscn" id="8_flw03"]
[ext_resource type="FontFile" uid="uid://isg08xtjb1gk" path="res://Fonts/delightious/Delightious.otf" id="9_ie3il"]
[ext_resource type="Texture2D" uid="uid://c3keblhgb2m8v" path="res://Sprites/Dinos/triceritops.png" id="9_ycno5"]
[ext_resource type="Texture2D" uid="uid://5r4a45k7em5o" path="res://Sprites/Dinos/triceritops_closed.png" id="10_0k6ga"]
[ext_resource type="AudioStream" uid="uid://feph3akdaxvw" path="res://Sounds/Ambient/boss_battle.mp3" id="11_fhmx2"]
[ext_resource type="FontFile" uid="uid://cfxrncmokfst7" path="res://Fonts/delightious/Delightious Italic.otf" id="12_4sp3o"]
[ext_resource type="AudioStream" uid="uid://dr03rrj5miuwc" path="res://Sounds/Ambient/fight.mp3" id="12_x72ap"]
[ext_resource type="Texture2D" uid="uid://1ppp4tuhpa8t" path="res://Sprites/Gui/GUI/GUI_2x.png" id="15_tutsk"]
[ext_resource type="Texture2D" uid="uid://ckdh8s473245i" path="res://Sprites/Keyboard/Keyboard Letters and Symbols.png" id="17_b7sci"]

[sub_resource type="Animation" id="Animation_so6kb"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextBox:active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EncounterAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_8dh0h"]
resource_name = "setup_battle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(260, 249), Vector2(871, 198)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy/AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Player:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-213, 249), Vector2(289, 257)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FightAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EncounterAudio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActionOptions:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(646, 705), Vector2(646, 421)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("DialogueBox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 705), Vector2(0, 391)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TextBox:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 357), Vector2(-786, 357)]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finish_setup_battle"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7m4o7"]
_data = {
"fade_in": SubResource("Animation_so6kb"),
"setup_battle": SubResource("Animation_8dh0h")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_ubke1"]
animations = [{
"frames": [{
"duration": 15.0,
"texture": ExtResource("6_6oqb3")
}, {
"duration": 1.0,
"texture": ExtResource("7_64adk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ywglg"]
animations = [{
"frames": [{
"duration": 15.0,
"texture": ExtResource("9_ycno5")
}, {
"duration": 1.0,
"texture": ExtResource("10_0k6ga")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ksh6y"]
texture = ExtResource("2_hga3y")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
9:0/0 = 0
10:0/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
18:1/0 = 0
17:1/0 = 0
16:1/0 = 0
15:1/0 = 0
13:2/0 = 0
12:2/0 = 0
11:2/0 = 0
10:2/0 = 0
9:2/0 = 0
9:1/0 = 0
10:1/0 = 0
14:2/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
15:3/0 = 0
14:3/0 = 0
13:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
18:4/0 = 0
17:4/0 = 0
16:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
10:5/0 = 0
9:5/0 = 0
8:5/0 = 0
7:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
4:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
18:6/0 = 0
17:6/0 = 0
16:6/0 = 0
15:6/0 = 0
17:7/0 = 0
18:7/0 = 0
16:7/0 = 0
15:7/0 = 0
14:7/0 = 0
13:7/0 = 0
12:7/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
15:9/0 = 0
14:9/0 = 0
13:9/0 = 0
12:9/0 = 0
11:9/0 = 0
10:9/0 = 0
9:9/0 = 0
8:9/0 = 0
7:9/0 = 0
7:8/0 = 0
7:7/0 = 0
6:7/0 = 0
5:7/0 = 0
4:8/0 = 0
4:9/0 = 0
7:10/0 = 0
6:10/0 = 0
5:10/0 = 0
4:10/0 = 0
6:9/0 = 0
6:8/0 = 0
5:8/0 = 0
5:9/0 = 0
4:7/0 = 0
3:7/0 = 0
2:7/0 = 0
1:7/0 = 0
0:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
3:9/0 = 0
2:9/0 = 0
1:9/0 = 0
0:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
7:11/0 = 0
6:11/0 = 0
5:11/0 = 0
4:11/0 = 0
3:11/0 = 0
2:11/0 = 0
1:11/0 = 0
0:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
7:13/0 = 0
6:13/0 = 0
5:13/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
1:13/0 = 0
0:13/0 = 0

[sub_resource type="TileSet" id="TileSet_ce6eo"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_ksh6y")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ynkmy"]
texture = ExtResource("15_tutsk")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0

[sub_resource type="TileSet" id="TileSet_qqwd4"]
sources/1 = SubResource("TileSetAtlasSource_ynkmy")

[sub_resource type="AtlasTexture" id="AtlasTexture_sna0c"]
atlas = ExtResource("17_b7sci")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssh8h"]
atlas = ExtResource("17_b7sci")
region = Rect2(0, 176, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6b22x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sna0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssh8h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_a5el8"]
atlas = ExtResource("17_b7sci")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m120"]
atlas = ExtResource("17_b7sci")
region = Rect2(64, 144, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ivwh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5el8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m120")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ColeBattle" type="Node2D"]
script = ExtResource("1_hla4g")
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("3_4qxtv")
metadata/_edit_lock_ = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("4_5mc7b")
metadata/_edit_lock_ = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("5_cmgwt")
metadata/_edit_lock_ = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 0)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(2, 2)
texture = ExtResource("6_keonl")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7m4o7")
}

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(260, 249)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Enemy"]
modulate = Color(0.560784, 0.227451, 0.972549, 1)
texture_filter = 1
position = Vector2(-3.05176e-05, -3.05176e-05)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ubke1")
frame_progress = 0.101598
flip_h = true
metadata/_edit_lock_ = true

[node name="TextBox" parent="." instance=ExtResource("8_flw03")]
position = Vector2(0, 357)
text_sentences = Array[String](["Ah-Ha!...", "You've walked right into...", "My Domain Expansion!!!", "Be prepared...", "For your demise!"])

[node name="BlackOut" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Player" type="Node2D" parent="."]
position = Vector2(-213, 249)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
modulate = Color(1, 0.352941, 1, 1)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ywglg")
frame_progress = 0.496379
flip_h = true
metadata/_edit_lock_ = true

[node name="DialogueBox" type="Node2D" parent="."]
position = Vector2(0, 705)

[node name="TileMap" type="TileMap" parent="DialogueBox"]
texture_filter = 1
scale = Vector2(8, 8)
tile_set = SubResource("TileSet_ce6eo")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 7, 1, 65536, 7, 2, 131072, 7, 3, 65536, 7, 4, 131072, 7, 5, 65536, 7, 6, 131072, 7, 7, 65536, 7, 8, 196608, 7, 65544, 196608, 8, 131080, 196608, 9, 196616, 196608, 10, 196614, 65536, 10, 196615, 131072, 10, 196612, 65536, 10, 196613, 131072, 10, 196610, 65536, 10, 196611, 131072, 10, 196608, 0, 10, 196609, 131072, 10, 65536, 0, 8, 131072, 0, 9, 131073, 786432, 2, 131079, 917504, 2, 65543, 917504, 0, 65537, 786432, 0, 65538, 851968, 0, 65539, 851968, 0, 65540, 851968, 0, 65541, 851968, 0, 65542, 851968, 0, 131078, 851968, 2, 131077, 851968, 2, 131076, 851968, 2, 131075, 851968, 2, 131074, 851968, 2)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="DialogueBox"]
offset_left = 64.0
offset_top = 64.0
offset_right = 512.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0.207843, 0.207843, 0.207843, 1)
theme_override_fonts/font = ExtResource("12_4sp3o")
theme_override_font_sizes/font_size = 56
text = "What will you do?"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="EncounterAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_fhmx2")
metadata/_edit_lock_ = true

[node name="FightAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_x72ap")
metadata/_edit_lock_ = true

[node name="ActionOptions" type="Node2D" parent="."]
position = Vector2(646, 705)

[node name="FightBorder" type="TileMap" parent="ActionOptions"]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_qqwd4")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262145, 7, 65536, 262145, 10, 1, 327681, 7, 65537, 327681, 10, 2, 458753, 7, 65538, 458753, 10, 4, 262145, 7, 65540, 262145, 10, 5, 393217, 7, 65541, 393217, 10, 6, 458753, 7, 65542, 458753, 10)
metadata/_edit_lock_ = true

[node name="FightLabel" type="Label" parent="ActionOptions"]
offset_left = 16.0
offset_top = 16.0
offset_right = 176.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("9_ie3il")
theme_override_font_sizes/font_size = 56
text = "Fight"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="RunLabel" type="Label" parent="ActionOptions"]
offset_left = 272.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 112.0
theme_override_fonts/font = ExtResource("9_ie3il")
theme_override_font_sizes/font_size = 56
text = "Run"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Q" type="AnimatedSprite2D" parent="ActionOptions"]
texture_filter = 1
position = Vector2(99, 163)
scale = Vector2(6.0625, 6.0625)
sprite_frames = SubResource("SpriteFrames_6b22x")
frame_progress = 0.979109
metadata/_edit_lock_ = true

[node name="E" type="AnimatedSprite2D" parent="ActionOptions"]
texture_filter = 1
position = Vector2(351, 163)
scale = Vector2(6.0625, 6.0625)
sprite_frames = SubResource("SpriteFrames_5ivwh")
frame_progress = 0.377857
metadata/_edit_lock_ = true

[connection signal="text_completed" from="TextBox" to="." method="_on_text_box_text_completed"]
